# weeklytasks

./: README.md
day1-hello-world/backend/: .env.example  pyproject.toml
day1-hello-world/backend/app/: config.py  main.py
uc1-RAG-Knowledge-Chatbot/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
uc1-RAG-Knowledge-Chatbot/backend/alembic/: env.py
uc1-RAG-Knowledge-Chatbot/backend/alembic/versions/: 6b5c3cd41bc3_initial_schema.py  (+2 more)
uc1-RAG-Knowledge-Chatbot/backend/app/: config.py  db.py  dependencies.py  main.py
uc1-RAG-Knowledge-Chatbot/backend/resources/: CON-FIN-002_Procurement_Policy.html  CON-FIN-003_Delegation_of_Authority.md  CON-HR-000_Employee_Handbook.docx  CON-HR-004_Compensation_Philosophy.md  CON-HR-005_Benefits_Guide_2024.docx  CON-HR-006_Recruitment_Hiring_Policy.docx  CON-HR-007_Anti_Harassment_Policy.html  CON-HR-008_Recognition_Rewards.md  CON-HR-009_Remote_Work_Policy.docx  CON-HR-010_Learning_Development_Policy.html  CON-HR-011_Accommodations_Policy.html  CON-HR-013_Onboarding_Offboarding.md  CON-HR-015_Whistleblower_Policy.html  CON-IT-002_Incident_Response_Policy.html  CON-IT-003_Software_Asset_Management.md  CON-IT-004_Employee_Data_Privacy_Policy.docx  CON-OPS-001_Business_Continuity_Policy.md  CON-OPS-002_Health_Safety_Policy.docx  Employee-Handbook-Template.docx  dol-employment-law-guide.html  onboarding-checklist-templates.html  progressive-discipline-policy  remote-work-policy.docx
uc1-RAG-Knowledge-Chatbot/backend/scripts/: run_ingest.py
uc1-RAG-Knowledge-Chatbot/backend/tests/: test_ingestion_service.py
(+83 files in other folders)
