[project]
name = "day1-hello-world-backend"
version = "0.1.0"
description = "DataFactZ AI Engineering Internship - Day 1 Hello-World smoke test backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.54.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
]
