[project]
name = "uc1-rag-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "azure-ai-inference>=1.0.0b9",
    "azure-core>=1.41.0",
    "azure-search-documents>=12.0.0",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-magic>=0.4.27",
    "sqlalchemy>=2.0.51",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.51.0",
]
